--- a/Cliente/src/app/components/add-product/add-product.component.html
+++ b/Cliente/src/app/components/add-product/add-product.component.html
@@ -30,7 +30,7 @@
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
         [(ngModel)]="product.category" required>
         <option value="" disabled selected>Seleccione una categoría</option>
-        <option *ngFor="let category of categories" [ngValue]="{ id: category.id, name: category.name, image: category.image }">{{ category.name }}</option>
+        <option *ngFor="let category of categories" value="{{category.id}}">{{ category.name }}</option>
       </select>
     </div>    
     <button type="submit"
