añadido datos base, faltan imagenes

--- a/Cliente/src/app/components/add-product/add-product.component.html
+++ b/Cliente/src/app/components/add-product/add-product.component.html
@@ -22,7 +22,7 @@
       <label for="image" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Imagen URL</label>
       <input type="text" id="image" name="image"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-        placeholder="URL imagen del producto" [(ngModel)]="product.images[0]" required />
+        placeholder="URL imagen del producto" [(ngModel)]="product.image" required />
     </div>
     <div class="mb-6">
       <label for="category" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Categoria</label>
