--- a/Cliente/src/app/components/product-detail/product-detail.component.html
+++ b/Cliente/src/app/components/product-detail/product-detail.component.html
@@ -2,7 +2,7 @@
     <div class="max-w-lg mx-auto">
       <div class="group rounded-lg border mt-16 bg-white shadow-lg">
         <div class="w-full overflow-hidden rounded-t-lg">
-          <img [src]="product.images[0]" [alt]="product.title" class="h-64 w-full object-cover object-center">
+          <img [src]="product.image" [alt]="product.title" class="h-64 w-full object-cover object-center">
         </div> 
         <div class="flex flex-col space-y-4 p-8">    
             <h3 class="text-lg font-semibold text-gray-900">{{ product.title }}</h3>
