--- a/Cliente/src/app/components/product-detail/product-detail.component.html
+++ b/Cliente/src/app/components/product-detail/product-detail.component.html
@@ -8,7 +8,7 @@
             <h3 class="text-lg font-semibold text-gray-900">{{ product.title }}</h3>
             <p class="text-base text-gray-700">{{ product.description }}</p>
             <div class="flex justify-between items-center">
-              <p class="text-lg font-medium text-gray-900">{{ product.price }}</p>
+              <p class="text-lg font-medium text-gray-900">{{ product.price }} €</p>
             </div>
         </div>
         <div class="flex justify-between p-8">
