--- a/Cliente/src/app/components/navbar/navbar.component.html
+++ b/Cliente/src/app/components/navbar/navbar.component.html
@@ -28,22 +28,22 @@
           <div id="dropdownNavbar" class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
               <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                 <li>
-                  <a routerLink="/productos" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">All</a>
+                  <a routerLink="/productos" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Todas</a>
                 </li>
                 <li>
-                  <a routerLink="productos-categoria/1" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Clothes</a>
+                  <a routerLink="productos-categoria/1" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Ropa</a>
                 </li>
                 <li>
-                  <a routerLink="productos-categoria/2" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Electronics</a>
+                  <a routerLink="productos-categoria/2" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Electrónica</a>
                 </li>
                 <li>
-                  <a routerLink="productos-categoria/3" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Furniture</a>
+                  <a routerLink="productos-categoria/3" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mobiliario</a>
                 </li>
                 <li>
-                  <a routerLink="productos-categoria/4" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Shoes</a>
+                  <a routerLink="productos-categoria/4" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Zapatos</a>
                 </li>
                 <li>
-                  <a routerLink="productos-categoria/5" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Miscellaneous</a>
+                  <a routerLink="productos-categoria/5" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Variado</a>
                 </li>
               </ul>
           </div>
