--- a/Cliente/src/app/components/products/products.component.html
+++ b/Cliente/src/app/components/products/products.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="products && products.length > 0; else noProducts">
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
       <div *ngFor="let product of products">
-        <app-product-card [product]="product" class="bg-white shadow-md rounded-lg p-4"></app-product-card>
+        <app-product-card [product]="product"></app-product-card>
       </div>
     </div>
   </ng-container>
